--- a/index.html
+++ b/index.html
@@ -34,13 +34,19 @@
   <link rel="stylesheet" href="./css/main.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.3/gsap.min.js" integrity="sha512-6zTDRWNxo8vI6JZYDCwhrJpg5icK3P4HNnW3czsO5Scb3lAoPDam+/wF3eog4hxcl0h44d0XlIcFkuoSaWHQ2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   
+  <!-- GSAP & SCROLL TO PLUGIN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.3/gsap.min.js" integrity="sha512-6zTDRWNxo8vI6JZYDCwhrJpg5icK3P4HNnW3czsO5Scb3lAoPDam+/wF3eog4hxcl0h44d0XlIcFkuoSaWHQ2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.3/ScrollToPlugin.min.js" integrity="sha512-7DWrlu5tqVVJlJ8Bo5sYcs45ZDyI0givp3xMQcf2dC76IkU5eap8/yCjoEtBWU+tUYCsbOBQ5RyAGnuq7ZZI0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   <!-- SWIPER -->
   <!-- 스와이퍼 버전8로 작업하니 글자가 안가려지는 이슈가 있었다 망할 라이브러리 버전도 중요하다. -->
   <link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css" />
   <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
   
+  <!-- ScrollMagic -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   <script defer src="./js/youtube.js"></script>
   <script defer src="./js/main.js"></script>
 
@@ -520,16 +526,16 @@
 
 
   <!-- SEASON PRODUCT -->
-  <section class="season-product">
+  <section class="season-product scroll-spy">
     <div class="inner">
 
       <img src="./images/floating3.png" alt="Icon" class="floating floating3" />
-      <img src="./images/season_product_image.png" alt="" class="product" />
+      <img src="./images/season_product_image.png" alt="" class="product back-to-position to-right delay-0" />
 
       <div class="text-group">
-        <img src="./images/season_product_text1.png" alt="" class="title" />
-        <img src="./images/season_product_text2.png" alt="" class="description" />
-        <div class="more">
+        <img src="./images/season_product_text1.png" alt="" class="title back-to-position to-left delay-1" />
+        <img src="./images/season_product_text2.png" alt="" class="description back-to-position to-left delay-2" />
+        <div class="more back-to-position to-left delay-3">
           <a href="javascript:void(0)" class="btn">자세히 보기</a>
         </div>
       </div>
@@ -538,31 +544,31 @@
   </section>
 
   <!-- RESERVE COFFEE -->
-  <section class="reserve-coffee">
+  <section class="reserve-coffee scroll-spy">
     <div class="inner">
 
-      <img src="./images/reserve_logo.png" alt="" class="reserve-logo" />
+      <img src="./images/reserve_logo.png" alt="" class="reserve-logo back-to-position to-right delay-0" />
 
       <div class="text-group">
-        <img src="./images/reserve_text.png" alt="" class="description" />
-        <div class="more">
+        <img src="./images/reserve_text.png" alt="" class="description back-to-position to-right delay-1" />
+        <div class="more back-to-position to-right delay-2">
           <a href="javascript:void(0)" class="btn btn--gold">자세히 보기</a>
         </div>
       </div>
 
-      <img src="./images/reserve_image.png" alt="" class="product" />
+      <img src="./images/reserve_image.png" alt="" class="product back-to-position to-left delay-3" />
 
     </div>
   </section>
 
   <!-- PICK YOUR FAVORITE -->
-  <section class="pick-your-favorite">
+  <section class="pick-your-favorite scroll-spy">
     <div class="inner">
       
       <div class="text-group">
-        <img src="./images/favorite_text1.png" alt="" class="title">
-        <img src="./images/favorite_text2.png" alt="" class="description">
-        <div class="more">
+        <img src="./images/favorite_text1.png" alt="" class="title back-to-position to-right delay-0">
+        <img src="./images/favorite_text2.png" alt="" class="description back-to-position to-right delay-1">
+        <div class="more back-to-position to-right delay-2">
           <a href="javascript:void(0)" class="btn btn--white">자세히 보기</a>
         </div>
       </div>
@@ -574,11 +580,130 @@
   <section class="reserve-store">
     <div class="inner">
 
-      
+      <div class="medal">
+        <div class="front">
+          <img src="./images/reserve_store_medal_front.png" alt="" />
+        </div>
+        <div class="back">
+          <img src="./images/reserve_store_medal_back.png" alt="" />
+          <a href="javascript:void(0)" class="btn">
+            매장안내
+          </a>
+        </div>
+      </div>
 
     </div>
   </section>
 
+  <!-- FIND THE STORE -->
+  <section class="find-store scroll-spy">
+    <div class="inner">
+
+      <img src="./images/find_store_texture1.png" alt="" class="texture1">
+      <img src="./images/find_store_texture2.png" alt="" class="texture2">
+      <img src="./images/find_store_picture1.jpg" alt="" class="picture picture1 back-to-position to-right delay-0">
+      <img src="./images/find_store_picture2.jpg" alt="" class="picture picture2 back-to-position to-right delay-1">
+
+      <div class="text-group">
+        <img src="./images/find_store_text1.png" alt="" class="title back-to-position to-left delay-0" />
+        <img src="./images/find_store_text2.png" alt="" class="description back-to-position to-left delay-1">
+        <div class="more back-to-position to-left delay-2">
+          <a href="javascript:void(0)" class="btn">매장 찾기</a>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!--AWARDS-->
+  <section class="awards">
+    <div class="inner">
+
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="./images/awards_slide1.jpg" alt="대통령 표창" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide2.jpg" alt="대통령 표창 (3년 연속)" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide3.jpg" alt="우수사업주 인증" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide4.jpg" alt="경연대회 대상" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide5.jpg" alt="대한상의회장상" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide6.jpg" alt="기업사회공헌 활동 부문" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide7.jpg" alt="KSI 1위 (5년 연속)" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide8.jpg" alt="KS-SQI 1위 (5년 연속)" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide9.jpg" alt="커피전문점 부문 (4년 연속)" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide10.jpg" alt="동반성장 부문 (4년 연속)" />
+          </div>
+        </div>
+      </div>
+
+      <div class="swiper-prev">
+        <div class="material-icons">arrow_back</div>
+      </div>
+      <div class="swiper-next">
+        <div class="material-icons">arrow_forward</div>
+      </div>
+
+
+  </section>
+
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="inner">
+
+      <ul class="menu">
+        <li><a href="javascript:void(0)" class="green">개인정보처리방침</a></li>
+        <li><a href="javascript:void(0)">영상정보처리기기 운영관리 방침</a></li>
+        <li><a href="javascript:void(0)">홈페이지 이용약관</a></li>
+        <li><a href="javascript:void(0)">위치정보 이용약관</a></li>
+        <li><a href="javascript:void(0)">스타벅스 카드 이용약관</a></li>
+        <li><a href="javascript:void(0)">윤리경영 핫라인</a></li>
+      </ul>
+
+      <div class="btn-group">
+        <a href="javascript:void(0)" class="btn btn--white">찾아오시는 길</a>
+        <a href="javascript:void(0)" class="btn btn--white">신규 입점제의</a>
+        <a href="javascript:void(0)" class="btn btn--white">사이트 맵</a>
+      </div>
+
+      <div class="info">
+        <span>사업자등록번호 201-81-21515</span>
+        <span>(주)극락벅스 코리아 대표이사 김선기</span>
+        <span>TEL : 010-7502-5680</span>
+        <span>개인정보 책임자 : 정길준</span>
+      </div>
+
+      <p class="copyright">
+        &copy; <span class="this-year"></span> GeukrakBucks Coffee Company. All Rights Reserved.
+      </p>
+      <img src="./images/starbucks_logo_only_text.png" alt="" class="logo" />
+
+
+    </div>
+  </footer>
+
+
+  <div id="to-top">
+    <div class="material-icons">arrow_upward</div>
+  </div>
 
 </body>
 </html>
